--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     container_name: hk_db
     environment:
       - POSTGRES_USER=raulkiyoshi
-      - POSTGRES_PASSWORD=Ghb260829cb132!
+      - "POSTGRES_PASSWORD=Ghb260829cb132!"
       - POSTGRES_DB=raulkiyoshi
     volumes:
       - db_data:/var/lib/postgresql/data
@@ -28,8 +28,8 @@ services:
   server:
     build: ./server
     environment:
-      - DATABASE_URL=postgresql://raulkiyoshi:Ghb260829cb132!@db:5432/raulkiyoshi?schema=public
-      - JWT_SECRET=Theojunji1!
+      - "DATABASE_URL=postgresql://raulkiyoshi:Ghb260829cb132!@db:5432/raulkiyoshi?schema=public"
+      - "JWT_SECRET=Theojunji1!"
       - PORT=3333
     depends_on:
       - db
