Atualizando dominio para hkemprestimos.site e IP da VPS

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name vidatodarevisao.com.br www.vidatodarevisao.com.br;
+    server_name hkemprestimos.site www.hkemprestimos.site;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
