--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,10 +1,22 @@
 server {
     listen 80;
-    server_name hkemprestimos.site www.hkemprestimos.site;
+    server_name hkemprestimos.site;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name hkemprestimos.site;
+
+    ssl_certificate /etc/letsencrypt/live/hkemprestimos.site/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/hkemprestimos.site/privkey.pem;
 
     location /api/ {
         rewrite ^/api/(.*) /$1 break;
