--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,8 +6,23 @@ server {
         root /var/www/certbot;
     }
 
+    location /api/ {
+        rewrite ^/api/(.*) /$1 break;
+        proxy_pass http://server:3333;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
     location / {
-        return 301 https://$host$request_uri;
+        proxy_pass http://client:80;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
     }
 }
 
