--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,30 @@
 services:
-  traefik:
-    image: traefik:v2.10
-    container_name: hk_traefik
-    command:
-      - "--api.insecure=true"
-      - "--providers.docker=true"
-      - "--providers.docker.exposedbydefault=false"
-      - "--entrypoints.web.address=:80"
-      - "--entrypoints.web.http.redirections.entryPoint.to=websecure"
-      - "--entrypoints.web.http.redirections.entryPoint.scheme=https"
-      - "--entrypoints.websecure.address=:443"
-      - "--certificatesresolvers.myresolver.acme.tlschallenge=true"
-      - "--certificatesresolvers.myresolver.acme.email=admin@hkemprestimos.site"
-      - "--certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json"
+  nginx:
+    image: nginx:alpine
+    container_name: hk_nginx
     ports:
       - "80:80"
       - "443:443"
-      - "8080:8080"
     volumes:
-      - "./letsencrypt:/letsencrypt"
-      - "/var/run/docker.sock:/var/run/docker.sock:ro"
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/certs:/etc/nginx/certs
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+    depends_on:
+      - client
+      - server
     networks:
       - web_network
     restart: always
+
+  certbot:
+    image: certbot/certbot
+    container_name: hk_certbot
+    volumes:
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+    networks:
+      - web_network
 
   db:
     image: postgres:15-alpine
@@ -47,13 +49,6 @@ services:
       - db
     networks:
       - web_network
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.server.rule=Host(`hkemprestimos.site`) && PathPrefix(`/api`)"
-      - "traefik.http.routers.server.entrypoints=websecure"
-      - "traefik.http.routers.server.tls.certresolver=myresolver"
-      - "traefik.http.middlewares.strip-api.stripprefix.prefixes=/api"
-      - "traefik.http.routers.server.middlewares=strip-api"
     restart: always
 
   client:
@@ -62,11 +57,6 @@ services:
       - server
     networks:
       - web_network
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.client.rule=Host(`hkemprestimos.site`)"
-      - "traefik.http.routers.client.entrypoints=websecure"
-      - "traefik.http.routers.client.tls.certresolver=myresolver"
     restart: always
 
 networks:
